0.03	2014-01-09
	- add basic stubs for:
		- Collection->remove
		- Collection->update
	- autogenerated ids from insert() are no Mango::BSON::ObjectIDs as expected
	- support for magic "n" in return docs for update and remove
	- fix full_name to return db.collection as expected from call


0.02 	2014-01-08
	- add support for error states


0.01.3 	2014-01-07
	- minor change to Makefile.PL and move abstract into module


0.01  	2013-12-23 0.01
	- first release
	- currently stubs:
		- Collection->insert
		- Collection->find
		- Collection->find_one
		- Collection->full_name
		- Collection->aggregate
		- Collection->create
		- Collection->drop
		- Cursor->backlog
		- Cursor->next
		- Cursor->all
		- Cursor->count