@@ -5,6 +5,7 @@
 	- autogenerated ids from insert() are no Mango::BSON::ObjectIDs as expected
 	- support for magic "n" in return docs for update and remove
 	- fix full_name to return db.collection as expected from call
+	- remove "state"
 
 
 0.02 	2014-01-08
